// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HideAction/> should display the correct text for hiding instagram comment 1`] = `
<div
  class="dropdown"
>
  <button
    class="dropdownItem dropdown-item"
    role="menuitem"
    tabindex="0"
    type="button"
  >
    <div
      class="icon"
    >
      <i
        class="material-icons"
      >
        visibility_off
      </i>
    </div>
    <div
      class="content"
    >
      <div
        class="title"
      >
        Hide comment
      </div>
      <div
        class="description"
      >
        Hide the comment in Instagram
      </div>
    </div>
  </button>
</div>
`;

exports[`<HideAction/> should display the correct text for unhiding non-instagram comment 1`] = `
<div
  class="dropdown"
>
  <button
    class="dropdownItem dropdown-item"
    role="menuitem"
    tabindex="0"
    type="button"
  >
    <div
      class="icon"
    >
      <i
        class="material-icons"
      >
        visibility_off
      </i>
    </div>
    <div
      class="content"
    >
      <div
        class="title"
      >
        Unhide comment
      </div>
      <div
        class="description"
      >
        Unhide the comment in Facebook
      </div>
    </div>
  </button>
</div>
`;
